--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+   <title>english for freelancing</title>
+</head>
 <div align="center">
 
 <h2 style="text-align: center; text-transform: capitalize; color: red; margin-top: 30px;"><span style="color: black">Designed By </span> Md.Mamun Hossen</h2>
